--- a/src/tests/src/solver/expressions/CMakeLists.txt
+++ b/src/tests/src/solver/expressions/CMakeLists.txt
@@ -4,8 +4,12 @@ add_executable(${EXECUTABLE_NAME})
 target_sources(${EXECUTABLE_NAME}
         PRIVATE
         module_test_declaration.cpp
-        test_nodes.cpp
-        test_visitors.cpp
+        test_PrintAndEvalNodes
+        test_TimeIndexVisitor.cpp
+        test_SubstitutionVisitor.cpp
+        test_LinearVisitor.cpp
+        test_CompareVisitor.cpp
+        test_CloneVisitor.cpp
 )
 
 target_link_libraries(${EXECUTABLE_NAME}
