Add tests with slightly larger trees

--- a/src/tests/src/solver/expressions/CMakeLists.txt
+++ b/src/tests/src/solver/expressions/CMakeLists.txt
@@ -10,6 +10,7 @@ target_sources(${EXECUTABLE_NAME}
         test_LinearVisitor.cpp
         test_CompareVisitor.cpp
         test_CloneVisitor.cpp
+	test_DeepWideTrees.cpp
 )
 
 target_link_libraries(${EXECUTABLE_NAME}
