--- a/src/solver/expressions/CMakeLists.txt
+++ b/src/solver/expressions/CMakeLists.txt
@@ -50,6 +50,7 @@ set(SRC_Expressions
         include/antares/solver/expressions/visitors/SubstitutionVisitor.h
 
         include/antares/solver/expressions/Registry.hxx
+        include/antares/solver/expressions/IName.h
 )
 
 
