Remove duplication in simulation run : replace a class with free functions

--- a/src/solver/simulation/CMakeLists.txt
+++ b/src/solver/simulation/CMakeLists.txt
@@ -27,8 +27,8 @@ set(SRC_SIMULATION
         include/antares/solver/simulation/solver.hxx
         include/antares/solver/simulation/solver.data.h
         solver.data.cpp
-        include/antares/solver/simulation/simulation-runner.h
-        simulation-runner.cpp
+		include/antares/solver/simulation/simulation-run.h
+        simulation-run.cpp
         include/antares/solver/simulation/common-eco-adq.h
         common-eco-adq.cpp
         common-hydro-remix.cpp
