--- a/.github/workflows/centos7.yml
+++ b/.github/workflows/centos7.yml
@@ -115,6 +115,16 @@ jobs:
            cmake --build _build --config Release -j$(nproc)
            ccache -s
 
+    - name: Run fast cucumber tests
+      uses: ./.github/workflows/cucumber-tests
+      with:
+        tags: not @slow
+
+    - name: Run slow cucumber tests
+      uses: ./.github/workflows/cucumber-tests
+      with:
+        tags: @slow
+
     - name: Installer .rpm creation
       run: |
            cd _build
