--- a/.github/workflows/oracle8.yml
+++ b/.github/workflows/oracle8.yml
@@ -121,6 +121,16 @@ jobs:
         cd _build
         ctest -C Release --output-on-failure -L "unit|end-to-end"
 
+    - name: Run fast cucumber tests
+      uses: ./.github/workflows/cucumber-tests
+      with:
+        tags: not @slow
+
+    - name: Run slow cucumber tests
+      uses: ./.github/workflows/cucumber-tests
+      with:
+        tags: @slow
+
     - name: Installer .rpm creation
       run: |
            cd _build
