--- a/.github/workflows/windows-vcpkg.yml
+++ b/.github/workflows/windows-vcpkg.yml
@@ -299,6 +299,16 @@ jobs:
           batch-name: long-tests-3
           os: ${{ env.os }}
 
+      - name: Run fast cucumber tests
+        uses: ./.github/workflows/cucumber-tests
+        with:
+          tags: not @slow
+
+      - name: Run slow cucumber tests
+        uses: ./.github/workflows/cucumber-tests
+        with:
+          tags: @slow
+
       - name: Barrier
         if: ${{ !success() }}
         run: exit 1
