--- a/.github/workflows/oracle8.yml
+++ b/.github/workflows/oracle8.yml
@@ -124,7 +124,7 @@ jobs:
     - name: Run fast cucumber tests
       uses: ./.github/workflows/cucumber-tests
       with:
-        tags: not @slow
+        tags: @fast
 
     - name: Run slow cucumber tests
       uses: ./.github/workflows/cucumber-tests
