--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -307,7 +307,7 @@ jobs:
       - name: Run fast cucumber tests
         uses: ./.github/workflows/cucumber-tests
         with:
-          tags: not @slow
+          tags: @fast
 
       - name: Run slow cucumber tests
         uses: ./.github/workflows/cucumber-tests
