--- a/.github/workflows/windows-vcpkg.yml
+++ b/.github/workflows/windows-vcpkg.yml
@@ -302,7 +302,7 @@ jobs:
       - name: Run fast cucumber tests
         uses: ./.github/workflows/cucumber-tests
         with:
-          tags: not @slow
+          tags: @fast
 
       - name: Run slow cucumber tests
         uses: ./.github/workflows/cucumber-tests
