--- a/.github/workflows/oracle8.yml
+++ b/.github/workflows/oracle8.yml
@@ -124,12 +124,12 @@ jobs:
     - name: Run fast cucumber tests
       uses: ./.github/workflows/cucumber-tests
       with:
-        tags: @fast
+        tags: "@fast"
 
     - name: Run slow cucumber tests
       uses: ./.github/workflows/cucumber-tests
       with:
-        tags: @slow
+        tags: "@slow"
 
     - name: Installer .rpm creation
       run: |
