--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "vcpkg"]
 	path = vcpkg
 	url = https://github.com/microsoft/vcpkg.git
+[submodule "src/tests/resources/Antares_Simulator_Tests_NR"]
+	path = src/tests/resources/Antares_Simulator_Tests_NR
+	url = https://github.com/AntaresSimulatorTeam/Antares_Simulator_Tests_NR.git
