remove array dependency to study

--- a/src/libs/antares/array/CMakeLists.txt
+++ b/src/libs/antares/array/CMakeLists.txt
@@ -15,7 +15,8 @@ target_link_libraries(array
         io #matrix.hxx
         jit #jit.hxx require logs
         Antares::memory
-        Antares::study
+        Antares::utils
+        # Antares::study
 )
 
 target_include_directories(array
