--- a/src/tests/src/libs/antares/study/series/CMakeLists.txt
+++ b/src/tests/src/libs/antares/study/series/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(timeseries-tests ${SRC_TIMESERIES_TESTS})
 
 target_link_libraries(timeseries-tests
                       PRIVATE
+                      Antares::array
                       Boost::unit_test_framework
                       Antares::series
                       antares-solver-simulation
